@@ -43,16 +43,19 @@ Available Formats:
 <p>
 <br>
 
-<H3>net= attribute mini-HOWTO</H3>
+<H3>File Formats</H3>
 Available Formats:
-<A HREF="./netattrib/netattrib.txt">txt</A> </LI>
+<A HREF="./fileformats/index.html">HTML</A>
+<A HREF="./fileformats/fileformats.dvi">dvi</A>
+<A HREF="./fileformats/fileformats.ps">ps</A>
+<A HREF="./fileformats/fileformats.pdf">pdf</A>
 
 <p>
 <br>
 
-<H3>File Formats</H3>
+<H3>net= attribute mini-HOWTO</H3>
 Available Formats:
-<A HREF="./fileformats/fileformats.html">HTML</A> </LI>
+<A HREF="./netattrib/netattrib.txt">txt</A> </LI>
 
 <p>
 <br>
