@@ -1,3 +1,8 @@
+2002-12-01 Ales Hvezda   <ahvezda@geda.seul.org>
+	
+	* fileformats/fileformats.tex: Finished up first draft of latex
+	version of this document.
+
 2002-11-30 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* aclocal.m4: Removed file from cvs.
